--- a/Server/package.json
+++ b/Server/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "generateData.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.4",
     "faker": "^4.1.0",
     "json-server": "^0.11.0",
     "lodash": "^4.17.4"
