--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "bootstrap": "latest"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0",
