--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/router": "^6.0.7",
     "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
-    "rxjs": "^6.2.1",
+    "rxjs": "6.2.1",
     "zone.js": "^0.8.4",
     "rxjs-compat": "^6.0.0-rc.0"
   },
