--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/core": "^0.4.6",
-    "@angular/common": "^6.0.7",
-    "@angular/compiler": "^6.0.7",
-    "@angular/core": "^6.0.7",
-    "@angular/forms": "^6.0.7",
-    "@angular/http": "^6.0.7",
-    "@angular/platform-browser": "^6.0.7",
-    "@angular/platform-browser-dynamic": "^6.0.7",
-    "@angular/router": "^6.0.7",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
     "rxjs": "6.2.1",
@@ -28,8 +27,9 @@
     "rxjs-compat": "^6.0.0-rc.0"
   },
   "devDependencies": {
-    "@angular/cli": "^6.0.8",
-    "@angular/compiler-cli": "^6.0.7",
+    "@angular-devkit/build-angular": "~0.803.23",
+    "@angular/cli": "^8.3.23",
+    "@angular/compiler-cli": "^8.2.14",
     "@types/jasmine": "2.5.53",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.0",
@@ -44,7 +44,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.7.2",
-    "@angular-devkit/build-angular": "~0.6.8"
+    "typescript": "~2.7.2"
   }
 }
